--- a/.github/workflows/forge-specialized.yaml
+++ b/.github/workflows/forge-specialized.yaml
@@ -113,6 +113,32 @@ jobs:
 
   ### Public fullnode tests
 
+  # Measures PFN latencies with a constant TPS
+  run-forge-pfn-const-tps:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_NAMESPACE: forge-pfn-const-tps-${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_RUNNER_DURATION_SECS: 1800 # Run for 30 minutes
+      FORGE_TEST_SUITE: pfn_const_tps
+      POST_TO_SLACK: true
+
+  # Measures PFN latencies with a constant TPS (with network chaos)
+  run-forge-pfn-const-tps-network-chaos:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_NAMESPACE: forge-pfn-const-tps-${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_RUNNER_DURATION_SECS: 1800 # Run for 30 minutes
+      FORGE_TEST_SUITE: pfn_const_tps_with_network_chaos
+      POST_TO_SLACK: true
+
   # Measures max PFN throughput and latencies under load
   run-forge-pfn-performance:
     if: ${{ github.event_name != 'pull_request' }}
@@ -126,17 +152,17 @@ jobs:
       FORGE_TEST_SUITE: pfn_performance
       POST_TO_SLACK: true
 
-  # Measures PFN latencies with a constant TPS
-  run-forge-pfn-const-tps:
+  # Measures max PFN throughput and latencies under load (with network chaos)
+  run-forge-pfn-performance-network-chaos:
     if: ${{ github.event_name != 'pull_request' }}
     needs: determine-test-metadata
     uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
     secrets: inherit
     with:
       IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
-      FORGE_NAMESPACE: forge-pfn-const-tps-${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_NAMESPACE: forge-pfn-performance-${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
       FORGE_RUNNER_DURATION_SECS: 1800 # Run for 30 minutes
-      FORGE_TEST_SUITE: pfn_const_tps
+      FORGE_TEST_SUITE: pfn_performance_with_network_chaos
       POST_TO_SLACK: true
 
   ### State sync tests
