--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -50,7 +50,7 @@ proposals:
   - name: enable_charge_invariant_violation
     metadata:
       title: "Enable charge_invariant_violation"
-      description: "AIP-20: Support of generic cryptography algebra operations in Aptos standard library."
+      description: "AIP-35: Charging invariant violation errors."
       source_code_url: "https://github.com/aptos-labs/aptos-core/pull/8213"
       discussion_url: "https://github.com/aptos-foundation/AIPs/blob/main/aips/aip-35.md"
     execution_mode: MultiStep
@@ -58,3 +58,14 @@ proposals:
     - FeatureFlag:
         enabled:
           - charge_invariant_violation
+  - name: enable_fee_payer
+    metadata:
+      title: "Enable pee payer"
+      description: "AIP-39: Support secondary fee payer to pay gas cost on behalf of the sender."
+      source_code_url: "https://github.com/aptos-labs/aptos-core/pull/8904"
+      discussion_url: "https://github.com/aptos-foundation/AIPs/blob/main/aips/aip-39.md"
+    execution_mode: MultiStep
+    update_sequence:
+    - FeatureFlag:
+        enabled:
+          - gas_payer_enabled
