--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "api/openapi-spec-generator",
     "api/test-context",
     "api/types",
+    "tools/x",
     "aptos-move/aptos-aggregator",
     "aptos-move/aptos-debugger",
     "aptos-move/aptos-gas-algebra",
@@ -403,6 +404,7 @@ aptos-vm-types = { path = "aptos-move/aptos-vm-types" }
 aptos-vm-validator = { path = "vm-validator" }
 aptos-warp-webserver = { path = "crates/aptos-warp-webserver" }
 aptos-writeset-generator = { path = "aptos-move/writeset-transaction-generator" }
+aptos-x-tool = { path = "tools/x"}
 
 # External crate dependencies.
 # Please do not add any test features here: they should be declared by the individual crate.
@@ -466,6 +468,7 @@ diesel_migrations = { version = "2.1.0", features = ["postgres"] }
 digest = "0.9.0"
 dir-diff = "0.3.2"
 dirs = "5.0.1"
+determinator = "0.12.0"
 ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
 ed25519-dalek-bip32 = "0.2.0"
 either = "1.6.1"
@@ -487,6 +490,7 @@ glob = "0.3.0"
 goldenfile = "1.1.0"
 google-cloud-pubsub = "0.18.0"
 google-cloud-storage = "0.13.0"
+guppy = "0.17.0"
 handlebars = "4.2.2"
 heck = "0.3.2"
 hex = "0.4.3"
